replaced header, added footer

--- a/index.html
+++ b/index.html
@@ -13,32 +13,107 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
-            <div class="container">
-                <div class="header__row">
-                    <div class="header__logo">
-                        <a href="#"><img src="img/logo.png" alt="fusely logo"></a>
-                    </div>
-                    <nav class="header__nav nav">
-                        <div class="nav__row">
-                            <a href="#" class="nav__item nav__item_active">Home</a>
-                            <a href="#" class="nav__item">Features</a>
-                            <a href="#" class="nav__item">Pricing</a>
-                            <a href="#" class="nav__item">Blog</a>
-                            <a href="#" class="nav__item">Contact</a>
+        <div class="content">
+            <div class="content__navbar navbar">
+                <div class="container">
+                    <div class="navbar__row">
+                        <div class="navbar__logo">
+                            <a href="/"><img src="img/logo.png" alt="fusely logo"></a>
                         </div>
-                    </nav>
-                    <div class="header__login login">
-                        <div class="login__row">
-                            <a href="#" class="login__button">Log in</a>
-                            <a href="#" class="login__button login__button_active">Get Started</a>
+                        <nav class="navbar__nav nav">
+                            <div class="nav__row">
+                                <a href="#" class="nav__item nav__item_active">Home</a>
+                                <a href="#" class="nav__item">Features</a>
+                                <a href="#" class="nav__item">Pricing</a>
+                                <a href="#" class="nav__item">Blog</a>
+                                <a href="#" class="nav__item">Contact</a>
+                            </div>
+                        </nav>
+                        <div class="navbar__login login">
+                            <div class="login__row">
+                                <a href="#" class="login__button button">Log in</a>
+                                <a href="#" class="login__button button button_filled">Get Started</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </header>
-        <div class="content"></div>
-        <footer></footer>
+            <div class="content__hero hero">
+                <div class="container">
+                    <div class="hero__row">
+                        <div class="hero__body">
+                            <div class="hero__title">Let’s get fusely together</div>
+                            <div class="hero__text">Outcome-centered product that reduce churn, optimize pricing, and grow your subscription business end-to-end.</div>
+                            <a href="#" class="hero__button button button_filled">Get Started</a>
+                        </div>
+                        <div class="hero__image">
+                            <img src="img/hero-img.png" alt="Let's get fusely">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="footer__menu-bottom menu-bottom">
+                <div class="container">
+                    <div class="menu-bottom__row">
+                        <div class="menu-bottom__column column">
+                            <div class="column__title">Product</div>
+                            <div class="column__list">
+                                <ul>
+                                    <li><a href="#">How it works</a></li>
+                                    <li><a href="#">Features</a></li>
+                                    <li><a href="#">Pricing</a></li>
+                                    <li><a href="#">FAQ</a></li>
+                                    <li><a href="#">Download</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="menu-bottom__column column">
+                            <div class="column__title">Company</div>
+                            <div class="column__list">
+                                <ul>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Partnership</a></li>
+                                    <li><a href="#">Terms of use</a></li>
+                                    <li><a href="#">Privacy policy</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="menu-bottom__column column">
+                            <div class="column__title">Support</div>
+                            <div class="column__list">
+                                <ul>
+                                    <li><a href="#">Help center</a></li>
+                                    <li><a href="#">Contact us</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="menu-bottom__column column">
+                            <div class="column__title">Get in touch</div>
+                            <div class="column__icons sm-icons">
+                                <div class="sm-icon__row">
+                                    <a href="#" class="sm-icons__icon sm-icons__icon_fb"></a>
+                                    <a href="#" class="sm-icons__icon sm-icons__icon_twitter"></a>
+                                    <a href="#" class="sm-icons__icon sm-icons__icon_linkedin"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__info info">
+                <div class="container">
+                    <div class="info__row">
+                        <div class="info__logo">
+                            <a href="/"><img src="img/logo-small.png" alt=""></a>
+                        </div>
+                        <div class="info__copyright">© Fusely 2022. All rights reserved.</div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </div>
 </body>
