sm-icons with fontello

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fontello.css">
     <title>fusely</title>
 </head>
 <body>
@@ -93,9 +94,15 @@
                     <div class="footer__menu-column column">
                         <div class="column__title">Get in touch</div>
                         <div class="column__icons-row">
-                            <a href="#" style="--bg-icon-image: url('/assets/icons/fb.png');" class="column__icons-item"></a>
-                            <a href="#" style="--bg-icon-image: url('/assets/icons/twitter.png');" class="column__icons-item"></a>
-                            <a href="#" style="--bg-icon-image: url('/assets/icons/linkedin.png');" class="column__icons-item"></a>
+                            <a href="#" class="column__icons-item">
+                                <i class="icon-facebook"></i>
+                            </a>
+                            <a href="#" class="column__icons-item">
+                                <i class="icon-twitter"></i>
+                            </a>
+                            <a href="#" class="column__icons-item">
+                                <i class="icon-linkedin"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
