replaced fonts, added anchors, installed webpack w def config

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/fontello.css">
+    <link rel="stylesheet" href="font/fontello/css/animation.css">
+    <link rel="stylesheet" href="font/fontello/css/fontello.css">
+    <link rel="stylesheet" href="font/fontello/css/fontello-codes.css">
+    <link rel="stylesheet" href="font/fontello/css/fontello-embedded.css">
+    <link rel="stylesheet" href="font/fontello/css/fontello-ie7.css">
+    <link rel="stylesheet" href="font/fontello/css/fontello-ie7-codes.css">
     <title>fusely</title>
 </head>
 <body>
@@ -23,11 +28,11 @@
                     </div>
                     <nav class="navbar__nav">
                         <div class="navbar__nav-row">
-                            <a href="#" class="navbar__nav-item navbar__nav-item_active">Home</a>
-                            <a href="#" class="navbar__nav-item">Features</a>
-                            <a href="#" class="navbar__nav-item">Pricing</a>
-                            <a href="#" class="navbar__nav-item">Blog</a>
-                            <a href="#" class="navbar__nav-item">Contact</a>
+                            <a href="/" class="navbar__nav-item navbar__nav-item_active">Home</a>
+                            <a href="#features" class="navbar__nav-item">Features</a>
+                            <a href="#pricing" class="navbar__nav-item">Pricing</a>
+                            <a href="#blog" class="navbar__nav-item">Blog</a>
+                            <a href="#contact" class="navbar__nav-item">Contact</a>
                         </div>
                     </nav>
                     <div class="navbar__login">
@@ -39,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="hero">
+        <div id="features" class="hero">
             <div class="container">
                 <div class="hero__row">
                     <div class="hero__body">
@@ -94,15 +99,9 @@
                     <div class="footer__menu-column column">
                         <div class="column__title">Get in touch</div>
                         <div class="column__icons-row">
-                            <a href="#" class="column__icons-item">
-                                <i class="icon-facebook"></i>
-                            </a>
-                            <a href="#" class="column__icons-item">
-                                <i class="icon-twitter"></i>
-                            </a>
-                            <a href="#" class="column__icons-item">
-                                <i class="icon-linkedin"></i>
-                            </a>
+                            <a href="#" class="column__icons-item"><i class="icon-facebook"></i></a>
+                            <a href="#" class="column__icons-item"><i class="icon-twitter"></i></a>
+                            <a href="#" class="column__icons-item"><i class="icon-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
