html+css compile with webpack

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <title>fusely</title>
-<script defer src="bundle.js"></script><link href="style.css" rel="stylesheet"></head>
+</head>
 <body>
     <div class="content">
         <div class="navbar">
