fix adaptive, modify buttons, optimize buttons in price cards

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
                     </nav>
                     <div class="navbar__login">
                         <div class="navbar__login-row">
-                            <button class="navbar__login-button button button_white">Log in</button>
-                            <button class="navbar__login-button button button_colored">Get Started</button>
+                            <button class="navbar__login-button button button_outlined">Log in</button>
+                            <button class="navbar__login-button button button_primary">Get Started</button>
                         </div>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                     <div class="hero__body">
                         <div class="hero__title">Let’s get fusely together</div>
                         <div class="hero__text">Outcome-centered product that reduce churn, optimize pricing, and grow your subscription business end-to-end.</div>
-                        <a href="#" class="hero__button button button_colored">Get Started</a>
+                        <a href="#" class="hero__button button button_primary">Get Started</a>
                     </div>
                     <div class="hero__image">
                         <img src="assets/img/hero-img.png" alt="Let's get fusely">
@@ -116,7 +116,8 @@
                                 <li>Limited Support</li>
                                 <li>Forever free</li>
                             </ul>
-                            <a href="#" class="price-card__button button button_white">Get Started</a>
+                            <a href="#" class="plan-card__button button button_white">Get Started</a>
+                            <a href="#" class="plan-card__button button button_outlined">Get Started</a>
                         </div>
                         <div class="pricing__plan-card content__flex-column plan-card plan-card_selected">
                             <div class="plan-card__title">Premium</div>
@@ -126,7 +127,8 @@
                                 <li>Premium Support</li>
                                 <li>Tracking Service</li>
                             </ul>
-                            <a href="#" class="price-card__button button button_white">Get Started</a>
+                            <a href="#" class="plan-card__button button button_white">Get Started</a>
+                            <a href="#" class="plan-card__button button button_outlined">Get Started</a>
                         </div>
                         <div class="pricing__plan-card content__flex-column plan-card">
                             <div class="plan-card__title">Enterprise</div>
@@ -136,7 +138,8 @@
                                 <li>Realtime overview</li>
                                 <li>Mobile app</li>
                             </ul>
-                            <a href="#" class="price-card__button button button_white">Get Started</a>
+                            <a href="#" class="plan-card__button button button_white">Get Started</a>
+                            <a href="#" class="plan-card__button button button_outlined">Get Started</a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +148,7 @@
                 <div class="container container_medium">
                     <div class="blog__row">
                         <div class="blog__title title">From our blog</div>
-                        <a href="#" class="blog__btn-more button button_white">View all</a>
+                        <a href="#" class="blog__btn-more button button_outlined">View all</a>
                     </div>
                     <div class="blog__row">
                         <div class="blog__article-snippet content__flex-column article-snippet">
@@ -187,7 +190,7 @@
                 <div class="contact__block">
                     <div class="contact__block-row">
                         <div class="contact__block-title">Interested in getting fusely?</div>
-                        <a href="#" class="contact__block-button button button_colored">Let’s talk</a>
+                        <a href="#" class="contact__block-button button button_primary">Let’s talk</a>
                     </div>
                 </div>
             </div>
