--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                     </nav>
                     <div class="navbar__login">
                         <div class="navbar__login-row">
-                            <button class="navbar__login-button button button_outlined">Log in</button>
+                            <button class="navbar__login-button button button-outline_primary">Log in</button>
                             <button class="navbar__login-button button button_primary">Get Started</button>
                         </div>
                     </div>
@@ -116,8 +116,8 @@
                                 <li>Limited Support</li>
                                 <li>Forever free</li>
                             </ul>
-                            <a href="#" class="plan-card__button button button_white">Get Started</a>
-                            <a href="#" class="plan-card__button button button_outlined">Get Started</a>
+                            <a href="#" class="plan-card__button button button_light">Get Started</a>
+                            <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
                         </div>
                         <div class="pricing__plan-card content__flex-column plan-card plan-card_selected">
                             <div class="plan-card__title">Premium</div>
@@ -127,8 +127,8 @@
                                 <li>Premium Support</li>
                                 <li>Tracking Service</li>
                             </ul>
-                            <a href="#" class="plan-card__button button button_white">Get Started</a>
-                            <a href="#" class="plan-card__button button button_outlined">Get Started</a>
+                            <a href="#" class="plan-card__button button button_light">Get Started</a>
+                            <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
                         </div>
                         <div class="pricing__plan-card content__flex-column plan-card">
                             <div class="plan-card__title">Enterprise</div>
@@ -138,8 +138,8 @@
                                 <li>Realtime overview</li>
                                 <li>Mobile app</li>
                             </ul>
-                            <a href="#" class="plan-card__button button button_white">Get Started</a>
-                            <a href="#" class="plan-card__button button button_outlined">Get Started</a>
+                            <a href="#" class="plan-card__button button button_light">Get Started</a>
+                            <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                 <div class="container container_medium">
                     <div class="blog__row">
                         <div class="blog__title title">From our blog</div>
-                        <a href="#" class="blog__btn-more button button_outlined">View all</a>
+                        <a href="#" class="blog__btn-more button button-outline_primary">View all</a>
                     </div>
                     <div class="blog__row">
                         <div class="blog__article-snippet content__flex-column article-snippet">
