--- a/src/index.html
+++ b/src/index.html
@@ -110,34 +110,38 @@
                     <div class="pricing__row">
                         <div class="pricing__plan-card content__flex-column plan-card">
                             <div class="plan-card__title">Starter</div>
-                            <div class="plan-card__price"><span>Free</span></div>
-                            <ul class="plan-card__features">
-                                <li>Dashboard</li>
-                                <li>Limited Support</li>
-                                <li>Forever free</li>
-                            </ul>
+                            <div class="plan-card__price">Free</div>
+                            <div class="plan-card__features">
+                                <div>Dashboard</div>
+                                <div>Limited Support</div>
+                                <div>Forever free</div>
+                            </div>
                             <a href="#" class="plan-card__button button button_light">Get Started</a>
                             <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
                         </div>
                         <div class="pricing__plan-card content__flex-column plan-card plan-card_selected">
                             <div class="plan-card__title">Premium</div>
-                            <div class="plan-card__price"><span>$29</span>/month</div>
-                            <ul class="plan-card__features">
-                                <li>Dashboard & Analysis</li>
-                                <li>Premium Support</li>
-                                <li>Tracking Service</li>
-                            </ul>
+                            <div class="plan-card__price">
+                                $29<div class="plan-card__price-period">/month</div>
+                            </div>
+                            <div class="plan-card__features">
+                                <div>Dashboard & Analysis</div>
+                                <div>Premium Support</div>
+                                <div>Tracking Service</div>
+                            </div>
                             <a href="#" class="plan-card__button button button_light">Get Started</a>
                             <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
                         </div>
                         <div class="pricing__plan-card content__flex-column plan-card">
                             <div class="plan-card__title">Enterprise</div>
-                            <div class="plan-card__price"><span>$49</span>/month</div>
-                            <ul class="plan-card__features">
-                                <li>All features in <span>Premium</span></li>
-                                <li>Realtime overview</li>
-                                <li>Mobile app</li>
-                            </ul>
+                            <div class="plan-card__price">
+                                $49<div class="plan-card__price-period">/month</div>
+                            </div>
+                            <div class="plan-card__features">
+                                <div>All features in <span>Premium</span></div>
+                                <div>Realtime overview</div>
+                                <div>Mobile app</div>
+                            </div>
                             <a href="#" class="plan-card__button button button_light">Get Started</a>
                             <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
                         </div>
@@ -203,34 +207,28 @@
                     <div class="footer__menu-column menu-column">
                         <div class="menu-column__title">Product</div>
                         <div class="menu-column__list">
-                            <ul>
-                                <li><a href="#">How it works</a></li>
-                                <li><a href="#">Features</a></li>
-                                <li><a href="#">Pricing</a></li>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Download</a></li>
-                            </ul>
+                            <div><a href="#">How it works</a></div>
+                            <div><a href="#">Features</a></div>
+                            <div><a href="#">Pricing</a></div>
+                            <div><a href="#">FAQ</a></div>
+                            <div><a href="#">Download</a></div>
                         </div>
                     </div>
                     <div class="footer__menu-column menu-column">
                         <div class="menu-column__title">Company</div>
                         <div class="menu-column__list">
-                            <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Partnership</a></li>
-                                <li><a href="#">Terms of use</a></li>
-                                <li><a href="#">Privacy policy</a></li>
-                            </ul>
+                            <div><a href="#">About</a></div>
+                            <div><a href="#">Blog</a></div>
+                            <div><a href="#">Partnership</a></div>
+                            <div><a href="#">Terms of use</a></div>
+                            <div><a href="#">Privacy policy</a></div>
                         </div>
                     </div>
                     <div class="footer__menu-column menu-column">
                         <div class="menu-column__title">Support</div>
                         <div class="menu-column__list">
-                            <ul>
-                                <li><a href="#">Help center</a></li>
-                                <li><a href="#">Contact us</a></li>
-                            </ul>
+                            <div><a href="#">Help center</a></div>
+                            <div><a href="#">Contact us</a></div>
                         </div>
                     </div>
                     <div class="footer__menu-column menu-column">
