--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
                     </nav>
                     <div class="navbar__login">
                         <div class="navbar__login-row">
-                            <button class="navbar__login-button button button-outline_primary">Log in</button>
-                            <button class="navbar__login-button button button_primary">Get Started</button>
+                            <button class="navbar__login-button fus-button fus-button-outline_primary">Log in</button>
+                            <button class="navbar__login-button fus-button fus-button_primary">Get Started</button>
                         </div>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                     <div class="hero__body">
                         <div class="hero__title">Let’s get fusely together</div>
                         <div class="hero__text">Outcome-centered product that reduce churn, optimize pricing, and grow your subscription business end-to-end.</div>
-                        <a href="#" class="hero__button button button_primary">Get Started</a>
+                        <a href="#" class="hero__button fus-button fus-button_primary">Get Started</a>
                     </div>
                     <div class="hero__image">
                         <img src="assets/img/hero-img.png" alt="Let's get fusely">
@@ -71,7 +71,7 @@
                         <div class="section__body">
                             <div class="section__title title">Detailed Examination</div>
                             <div class="section__text">A daily dataset to keep you up to date on subscription market trends and what's happening in your vertical.</div>
-                            <a href="#" class="section__button button-more">Learn more</a>
+                            <a href="#" class="section__button fus-button-underline">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                         <div class="section__body">
                             <div class="section__title title">Creative Solutions</div>
                             <div class="section__text">Creativity is our second name. We're full of inventive ideas and we're happy to present them to you.</div>
-                            <a href="#" class="section__button button-more">Learn more</a>
+                            <a href="#" class="section__button fus-button-underline">Learn more</a>
                         </div>
                         <div class="section__image">
                             <img src="assets/img/creative-solutions.png" alt="Creative solutions">
@@ -99,7 +99,7 @@
                         <div class="section__body">
                             <div class="section__title title">Professional Team</div>
                             <div class="section__text">Well, obviously, we're professionals. Don't hesitate - get to know us better.</div>
-                            <a href="#" class="section__button button-more">Learn more</a>
+                            <a href="#" class="section__button fus-button-underline">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -108,42 +108,42 @@
                 <div class="container container_medium">
                     <div class="pricing__title title">Choose your plan</div>
                     <div class="pricing__row">
-                        <div class="pricing__plan-card content__flex-column plan-card">
-                            <div class="plan-card__title">Starter</div>
-                            <div class="plan-card__price">Free</div>
-                            <div class="plan-card__features">
+                        <div class="pricing__plan-card content__flex-column fus-plan-card">
+                            <div class="fus-plan-card__title">Starter</div>
+                            <div class="fus-plan-card__price">Free</div>
+                            <div class="fus-plan-card__features">
                                 <div>Dashboard</div>
                                 <div>Limited Support</div>
                                 <div>Forever free</div>
                             </div>
-                            <a href="#" class="plan-card__button button button_light">Get Started</a>
-                            <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
+                            <a href="#" class="fus-plan-card__button fus-button fus-button_light">Get Started</a>
+                            <a href="#" class="fus-plan-card__button fus-button fus-button-outline_primary">Get Started</a>
                         </div>
-                        <div class="pricing__plan-card content__flex-column plan-card plan-card_selected">
-                            <div class="plan-card__title">Premium</div>
-                            <div class="plan-card__price">
-                                $29<div class="plan-card__price-period">/month</div>
+                        <div class="pricing__plan-card content__flex-column fus-plan-card fus-plan-card_selected">
+                            <div class="fus-plan-card__title">Premium</div>
+                            <div class="fus-plan-card__price">
+                                $29<div class="fus-plan-card__price-period">/month</div>
                             </div>
-                            <div class="plan-card__features">
+                            <div class="fus-plan-card__features">
                                 <div>Dashboard & Analysis</div>
                                 <div>Premium Support</div>
                                 <div>Tracking Service</div>
                             </div>
-                            <a href="#" class="plan-card__button button button_light">Get Started</a>
-                            <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
+                            <a href="#" class="fus-plan-card__button fus-button fus-button_light">Get Started</a>
+                            <a href="#" class="fus-plan-card__button fus-button fus-button-outline_primary">Get Started</a>
                         </div>
-                        <div class="pricing__plan-card content__flex-column plan-card">
-                            <div class="plan-card__title">Enterprise</div>
-                            <div class="plan-card__price">
-                                $49<div class="plan-card__price-period">/month</div>
+                        <div class="pricing__plan-card content__flex-column fus-plan-card">
+                            <div class="fus-plan-card__title">Enterprise</div>
+                            <div class="fus-plan-card__price">
+                                $49<div class="fus-plan-card__price-period">/month</div>
                             </div>
-                            <div class="plan-card__features">
+                            <div class="fus-plan-card__features">
                                 <div>All features in <span>Premium</span></div>
                                 <div>Realtime overview</div>
                                 <div>Mobile app</div>
                             </div>
-                            <a href="#" class="plan-card__button button button_light">Get Started</a>
-                            <a href="#" class="plan-card__button button button-outline_primary">Get Started</a>
+                            <a href="#" class="fus-plan-card__button fus-button fus-button_light">Get Started</a>
+                            <a href="#" class="fus-plan-card__button fus-button fus-button-outline_primary">Get Started</a>
                         </div>
                     </div>
                 </div>
@@ -152,37 +152,37 @@
                 <div class="container container_medium">
                     <div class="blog__row">
                         <div class="blog__title title">From our blog</div>
-                        <a href="#" class="blog__btn-more button button-outline_primary">View all</a>
+                        <a href="#" class="blog__btn-more fus-button fus-button-outline_primary">View all</a>
                     </div>
                     <div class="blog__row">
-                        <div class="blog__article-snippet content__flex-column article-snippet">
-                            <div class="article-snippet__image">
+                        <div class="blog__article-snippet content__flex-column fus-article-snippet">
+                            <div class="fus-article-snippet__image">
                                 <img src="assets/img/blog/what-is.png" alt="What's Fusely">
                             </div>
-                            <div class="article-snippet__body">
-                                <div class="article-snippet__title">What’s Fusely?</div>
-                                <div class="article-snippet__text">A brand new company, created for everyone. This article will help you understand what "fusely" stands for.</div>
-                                <a href="#" class="article-snippet__button-more button-more">Read more</a>
+                            <div class="fus-article-snippet__body">
+                                <div class="fus-article-snippet__title">What’s Fusely?</div>
+                                <div class="fus-article-snippet__text">A brand new company, created for everyone. This article will help you understand what "fusely" stands for.</div>
+                                <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
                             </div>
                         </div>
-                        <div class="blog__article-snippet content__flex-column article-snippet">
-                            <div class="article-snippet__image">
+                        <div class="blog__article-snippet content__flex-column fus-article-snippet">
+                            <div class="fus-article-snippet__image">
                                 <img src="assets/img/blog/introducing.png" alt="Introducing Fusely Engage">
                             </div>
-                            <div class="article-snippet__body">
-                                <div class="article-snippet__title">Introducing Fusely Engage</div>
-                                <div class="article-snippet__text">We’re happy to announce the Fusely Engage. The first growth automation platform designed for the digital interactions.</div>
-                                <a href="#" class="article-snippet__button-more button-more">Read more</a>
+                            <div class="fus-article-snippet__body">
+                                <div class="fus-article-snippet__title">Introducing Fusely Engage</div>
+                                <div class="fus-article-snippet__text">We’re happy to announce the Fusely Engage. The first growth automation platform designed for the digital interactions.</div>
+                                <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
                             </div>
                         </div>
-                        <div class="blog__article-snippet content__flex-column article-snippet">
-                            <div class="article-snippet__image">
+                        <div class="blog__article-snippet content__flex-column fus-article-snippet">
+                            <div class="fus-article-snippet__image">
                                 <img src="assets/img/blog/plans.png" alt="Premium vs Enterprise plan">
                             </div>
-                            <div class="article-snippet__body">
-                                <div class="article-snippet__title">Premium vs Enterprise plan</div>
-                                <div class="article-snippet__text">Let’s compare our most popular plans: Premium and Enterprise. This article will help you decide which one will be better for your needs.</div>
-                                <a href="#" class="article-snippet__button-more button-more">Read more</a>
+                            <div class="fus-article-snippet__body">
+                                <div class="fus-article-snippet__title">Premium vs Enterprise plan</div>
+                                <div class="fus-article-snippet__text">Let’s compare our most popular plans: Premium and Enterprise. This article will help you decide which one will be better for your needs.</div>
+                                <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
                             </div>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
                 <div class="contact__block">
                     <div class="contact__block-row">
                         <div class="contact__block-title">Interested in getting fusely?</div>
-                        <a href="#" class="contact__block-button button button_primary">Let’s talk</a>
+                        <a href="#" class="contact__block-button fus-button fus-button_primary">Let’s talk</a>
                     </div>
                 </div>
             </div>
