add burger and hidden mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
                     <div class="navbar__logo">
                         <a href="/"><img src="assets/img/logo.svg" alt="fusely logo"></a>
                     </div>
+                    <div class="navbar__burger">
+                        <span></span>
+                    </div>
                     <nav class="navbar__nav nav">
                         <div class="nav__row">
                             <a href="/" class="nav__item nav__item_active">Home</a>
