add tablet adaptive for hero-slide and sections

--- a/src/index.html
+++ b/src/index.html
@@ -67,14 +67,14 @@
             </div>
             <div id="features" class="section">
                 <div class="container container_medium">
-                    <div class="section__row">
-                        <div class="section__image">
-                            <img src="assets/img/detailed-examination.png" alt="Detailed examination">
-                        </div>
+                    <div class="section__row section__row_inverted">
                         <div class="section__body">
                             <div class="section__title title">Detailed Examination</div>
                             <div class="section__text">A daily dataset to keep you up to date on subscription market trends and what's happening in your vertical.</div>
                             <a href="#" class="section__button fus-button-underline">Learn more</a>
+                        </div>
+                        <div class="section__image">
+                            <img src="assets/img/detailed-examination.png" alt="Detailed examination">
                         </div>
                     </div>
                 </div>
@@ -95,14 +95,14 @@
             </div>
             <div class="section">
                 <div class="container container_medium">
-                    <div class="section__row">
-                        <div class="section__image">
-                            <img src="assets/img/professional-team.png" alt="Professional Team">
-                        </div>
+                    <div class="section__row section__row_inverted">
                         <div class="section__body">
                             <div class="section__title title">Professional Team</div>
                             <div class="section__text">Well, obviously, we're professionals. Don't hesitate - get to know us better.</div>
                             <a href="#" class="section__button fus-button-underline">Learn more</a>
+                        </div>
+                        <div class="section__image">
+                            <img src="assets/img/professional-team.png" alt="Professional Team">
                         </div>
                     </div>
                 </div>
