--- a/src/index.html
+++ b/src/index.html
@@ -153,36 +153,36 @@
             </div>
             <div id="blog" class="blog">
                 <div class="container container_medium">
-                    <div class="blog__row">
+                    <div class="blog__row-title">
                         <div class="blog__title title">From our blog</div>
                         <a href="#" class="blog__btn-more fus-button fus-button-outline_primary">View all</a>
                     </div>
-                    <div class="blog__row">
+                    <div class="blog__row-content">
                         <div class="blog__article-snippet content__flex-column fus-article-snippet">
-                            <div class="fus-article-snippet__image">
+                            <div class="blog__row-content-image fus-article-snippet__image">
                                 <img src="assets/img/blog/what-is.png" alt="What's Fusely">
                             </div>
-                            <div class="fus-article-snippet__body">
+                            <div class="blog__row-content-body fus-article-snippet__body">
                                 <div class="fus-article-snippet__title">What’s Fusely?</div>
                                 <div class="fus-article-snippet__text">A brand new company, created for everyone. This article will help you understand what "fusely" stands for.</div>
                                 <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
                             </div>
                         </div>
                         <div class="blog__article-snippet content__flex-column fus-article-snippet">
-                            <div class="fus-article-snippet__image">
+                            <div class="blog__row-content-image fus-article-snippet__image">
                                 <img src="assets/img/blog/introducing.png" alt="Introducing Fusely Engage">
                             </div>
-                            <div class="fus-article-snippet__body">
+                            <div class="blog__row-content-bodyfus-article-snippet__body">
                                 <div class="fus-article-snippet__title">Introducing Fusely Engage</div>
                                 <div class="fus-article-snippet__text">We’re happy to announce the Fusely Engage. The first growth automation platform designed for the digital interactions.</div>
                                 <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
                             </div>
                         </div>
                         <div class="blog__article-snippet content__flex-column fus-article-snippet">
-                            <div class="fus-article-snippet__image">
+                            <div class="blog__row-content-image fus-article-snippet__image">
                                 <img src="assets/img/blog/plans.png" alt="Premium vs Enterprise plan">
                             </div>
-                            <div class="fus-article-snippet__body">
+                            <div class="blog__row-content-bodyfus-article-snippet__body">
                                 <div class="fus-article-snippet__title">Premium vs Enterprise plan</div>
                                 <div class="fus-article-snippet__text">Let’s compare our most popular plans: Premium and Enterprise. This article will help you decide which one will be better for your needs.</div>
                                 <a href="#" class="fus-article-snippet__button-underline fus-button-underline">Read more</a>
