add focus on burger, fix variables in sass

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                     <div class="navbar__logo">
                         <a href="/"><img src="assets/img/logo.svg" alt="fusely logo"></a>
                     </div>
-                    <div class="navbar__burger">
+                    <div tabindex="0" class="navbar__burger">
                         <span></span>
                     </div>
                     <nav class="navbar__nav nav">
