remove hover from pricing plan-cards

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,6 @@
                                 <div>Limited Support</div>
                                 <div>Forever free</div>
                             </div>
-                            <a href="#" class="fus-plan-card__button fus-button fus-button_light">Get Started</a>
                             <a href="#" class="fus-plan-card__button fus-button fus-button-outline_primary">Get Started</a>
                         </div>
                         <div class="pricing__plan-card content__flex-column fus-plan-card fus-plan-card_selected">
@@ -133,7 +132,6 @@
                                 <div>Tracking Service</div>
                             </div>
                             <a href="#" class="fus-plan-card__button fus-button fus-button_light">Get Started</a>
-                            <a href="#" class="fus-plan-card__button fus-button fus-button-outline_primary">Get Started</a>
                         </div>
                         <div class="pricing__plan-card content__flex-column fus-plan-card">
                             <div class="fus-plan-card__title">Enterprise</div>
@@ -145,7 +143,6 @@
                                 <div>Realtime overview</div>
                                 <div>Mobile app</div>
                             </div>
-                            <a href="#" class="fus-plan-card__button fus-button fus-button_light">Get Started</a>
                             <a href="#" class="fus-plan-card__button fus-button fus-button-outline_primary">Get Started</a>
                         </div>
                     </div>
@@ -159,7 +156,7 @@
                     </div>
                     <div class="blog__row-content">
                         <div class="blog__article-snippet content__flex-column fus-article-snippet">
-                            <div class="blog__row-content-image fus-article-snippet__image">
+                            <div class="fus-article-snippet__image">
                                 <img src="assets/img/blog/what-is.png" alt="What's Fusely">
                             </div>
                             <div class="blog__row-content-body fus-article-snippet__body">
@@ -169,7 +166,7 @@
                             </div>
                         </div>
                         <div class="blog__article-snippet content__flex-column fus-article-snippet">
-                            <div class="blog__row-content-image fus-article-snippet__image">
+                            <div class="fus-article-snippet__image">
                                 <img src="assets/img/blog/introducing.png" alt="Introducing Fusely Engage">
                             </div>
                             <div class="blog__row-content-bodyfus-article-snippet__body">
@@ -179,7 +176,7 @@
                             </div>
                         </div>
                         <div class="blog__article-snippet content__flex-column fus-article-snippet">
-                            <div class="blog__row-content-image fus-article-snippet__image">
+                            <div class="fus-article-snippet__image">
                                 <img src="assets/img/blog/plans.png" alt="Premium vs Enterprise plan">
                             </div>
                             <div class="blog__row-content-bodyfus-article-snippet__body">
